--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "mongoose": "^7.3.4"
+    "mongoose": "^7.3.4",
+    "morgan": "^1.10.0",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
