--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^7.3.4",
     "morgan": "^1.10.0",
+    "twilio": "^5.0.4",
     "winston": "^3.13.0"
   },
   "devDependencies": {
